--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -2,6 +2,28 @@
 
 <%= render @garden %>
 
+<div class="cards pt-4 mt-3 mx-3">
+  <% @garden.plants.each do |plant| %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= plant.image %>)">
+      <%= plant.name %>
+      <%= link_to 'x', plant_path(plant), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn-delete' %>
+    </div>
+  <% end %>
+</div>
+
+<div class="container mt-3">
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <h2>Add a plant</h2>
+      <%= simple_form_for [@garden, @plant] do |f| %>
+        <%= f.input :name, placeholder: 'Tulipa' %>
+        <%= f.input :image, placeholder: 'www.my-plant-image-url' %>
+        <%= f.submit 'Add', class: 'btn btn-sm btn-success' %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
 <div>
   <%= link_to "Back to gardens", gardens_path %>
 </div>
