--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "config/bootstrap_variables";
 // External libraries
 @import "bootstrap/scss/bootstrap";
+@import "tom-select/dist/scss/tom-select";
 @import "font-awesome";
 // Your CSS partials
 @import "components/index";
